crates/test-files/fixtures/compile_errors/invalid_impl_location.fe
use std::traits::IsNumeric

impl IsNumeric for u8 {}
